core/components/SubjectPopupContent.module.css
/* POP-UP STYLING */
.popUp {
    width: clamp(12.5rem, 33vw + 10vw, 20rem);
    overflow: auto;
    border-radius: 0.75rem;
    background-color: #EEEFFC;
    box-shadow: 0 4px 5px rgba(0,0,0,.25);
    border: 0.125rem solid #333;
    user-select: none;
    -webkit-user-select: none;
}

.imageContainer {
    width: 100%;
    height: auto;
    line-height: 0;
    border-bottom: 0.125rem solid #00C49A;
    box-shadow: 0 0 0.25rem #333;
}

.popUpImage {
    width: 100%;
}

.popUpContent {
    padding: 0;
}

.popUpHeader {
    background: var(--ocean-gradient);
    padding: 0.25rem 0 0.625rem 1rem;
}

:global(#gw-map) h2:global(.map-heading).subjectName,
.species {
    color: #fff;
}

.species {
    font-style: italic;
}

.popUpBody {
    padding: 1rem;
    display: flex;
    flex-flow: column nowrap;
}

:global(#gw-map) h3:global(.map-heading).summaryHeading {
    margin-bottom: 0.25rem;
}

.popUpButtonsContainer {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    border-top: 1px solid rgba(0,0,0,0.12);
    margin-top: 1rem;
    padding: 1rem 0;
    gap: 1.5rem;
    
}

:global(#gw-map) button.popUpButton {
    display: flex;
    align-items: center;
    cursor: pointer;
}

:global(#gw-map) button.popUpButton svg {
    width: 2.375rem;
    height: auto;
}

.popUpButtonText {
    align-self: center;
    margin-left: 0.5rem;
    font-size: 1.25rem;
    line-height: 1.2em;
    white-space: nowrap;
    transition: opacity linear var(--hover-transition-duration);
}

button.popUpButton:hover .popUpButtonText {
    opacity: 0.5;
}

button.popUpButton[data-active="true"] .popUpButtonText {
    font-weight: 700;
}

.nameContainer {
    padding: 15px;
}

.popUp>p {
    margin: 1pt;
}

.date {
    font-size: 8pt;
    width: 45%;
    padding-right: 5px;
}

.arrow {
    transform: rotate(180deg);
}

.ulList {
    margin: none;
}

.mapboxgl-popup-close-button {
    display: none;
}

